--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <button class="restart">Replay Quiz</button>
         <button class="quit">Quit Quiz</button>
     </div>
-
     </div>
+<script src ="script.js"></script>
 
 </body>
 </html>
