--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </header>
 <section>
     <div class="que_text">
-        <span>What does HTML stand for?</span>
+       <!-- <span>What does HTML stand for?</span> -->
     </div>
     <div class="option_list">
-        <div class="option">
+       <!--- <div class="option">
             <span>Hyper Text Preprocessor</span>
             <div class="icon tick"><i class="fas fa-check"></i></div>
     </div>
@@ -56,14 +56,14 @@
     </div>
         <div class="option">
             <span>Hyper Tool Multi Language</span>
-        </div>
+        </div> -->
     </div>
 </section>
 
 <!--Quiz Box Footer-->
 <footer>
     <div class="total_que">
-        <span><p>2</p>of<p>5</p>Questions</span>
+      <!-- <span><p>2</p>of<p>5</p>Questions</span> -->
     </div>
     <button class="next_btn">Next Question</button>
 </footer>
@@ -83,7 +83,7 @@
         <button class="quit">Quit Quiz</button>
     </div>
     </div>
-<script src ="script.js"></script>
+
 
 </body>
 </html>
