--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="./Assets/style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 </head>
 <body>
     <!--Start Quiz Button-->
@@ -37,13 +37,14 @@
             <div class="time_text">Time Left</div>
             <div class="timer_sec">15</div>
     </div>
+    <div class="time_line"></div>
     </header>
 <section>
     <div class="que_text">
-       <!-- <span>What does HTML stand for?</span> -->
+       <!--<span>What does HTML stand for?</span>-->
     </div>
     <div class="option_list">
-       <!--- <div class="option">
+       <!-- <div class="option">
             <span>Hyper Text Preprocessor</span>
             <div class="icon tick"><i class="fas fa-check"></i></div>
     </div>
@@ -76,7 +77,7 @@
 </div>
     <div class="complete_text">You've completed the Quiz</div>
     <div class="score_text">
-        <span>and sorry, You got only <p>2</p>out of<p>5</p> </span>
+        <!--<span>and sorry, You got only <p>2</p>out of<p>5</p> </span>-->
 </div>
     <div class="buttons">
         <button class="restart">Replay Quiz</button>
@@ -84,6 +85,9 @@
     </div>
     </div>
 
+    <script src="./questions.js"></script>
+
+<script src="./script.js"></script>
 
 </body>
 </html>
