--- a/index.html
+++ b/index.html
@@ -3,91 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Welcome to my Quiz App</title>
     <link rel="stylesheet" href="./Assets/style.css">
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="./Assets/materialize.min.css"  media="screen,projection"/>
 
 </head>
 <body>
     <!--Start Quiz Button-->
-    <div class="start_btn"><button>Start Quiz</button></div>
+    <div class="start"><button>Start Quiz</button></div>
 
    <!--Info Box-->
-   <div class="info_box">
-    <div class="info_title">
-       <span>Some Rules of this Quiz</span>
+   <div class="square">
+    <div class="data_name">
+       <span>Rules of this Quiz</span>
    </div>
-   <div class="info_list">
-    <div class="info">1. You will only have <span>15 seconds</span>per each question.</div>
-    <div class="info>">2. Once you pick an answer you can not switch</div> 
-    <div class="info">3. You cant select any option once time is up</div>
-    <div class="info>">4. You cant exit from the Quiz while you're playing</div> 
-    <div class="info">5. You'll get points on the basis of the correct answer</div>
+   <div class="data_list">
+    <div class="data">1. You'll have <span>20 seconds</span>per each question.</div>
+    <div class="data">2. No switching!</div> 
+    <div class="data">3. When time is up that's it!</div>
+    <div class="data">4. No exiting quiz once you've started</div> 
+    <div class="data">5. You get points if you're right! Duh!</div>
 </div>
 <div class="buttons">
-    <button class="quit">Exit Quiz</button>
-    <button class="restart">Continue</button>
+    <button class="cancel">Leave</button>
+    <button class="try_again">Keep Going</button>
     </div>
 </div>
 
 <!--Quiz Box-->
-<div class="quiz_box">
+<div class="qcube">
     <header>
-        <div class="title">Awesome Quiz App</div>
-        <div class="timer">
-            <div class="time_text">Time Left</div>
-            <div class="timer_sec">15</div>
+        <div class="name">A Quiz App</div>
+        <div class="time">
+            <div class="ttext">Remaining Time</div>
+            <div class="tsec">20</div>
     </div>
-    <div class="time_line"></div>
+    <div class="timego"></div>
     </header>
 <section>
     <div class="que_text">
-       <!--<span>What does HTML stand for?</span>-->
+        <!--Questions from Javascript-->
+       <span>What does CSS stand for?</span>
     </div>
-    <div class="option_list">
-       <!-- <div class="option">
-            <span>Hyper Text Preprocessor</span>
+    <div class="questList">
+        <div class="option">
+            <span>Cascading Style Sheets</span>
             <div class="icon tick"><i class="fas fa-check"></i></div>
     </div>
     <div class="option">
-        <span>Hyper Text Markup Language</span>
+        <span>Cascading Style Smiles</span>
         <div class="icon cross"><i class="fas fa-times"></i></div>
     </div>
     <div class="option">
-        <span>Hyper Text Multiple Language</span>
+        <span>Cascading Super Style</span>
+        <div class="icon cross"><i class="fas fa-times"></i></div>
     </div>
         <div class="option">
-            <span>Hyper Tool Multi Language</span>
-        </div> -->
+            <span>Cascading Style Sass</span>
+            <div class="icon cross"><i class="fas fa-times"></i></div>
+        </div> 
     </div>
 </section>
 
 <!--Quiz Box Footer-->
 <footer>
-    <div class="total_que">
-      <!-- <span><p>2</p>of<p>5</p>Questions</span> -->
+    <div class="totals">
+
     </div>
-    <button class="next_btn">Next Question</button>
+    <button class="next">Next Question</button>
 </footer>
 </div>
 
 <!--Result Box-->
-<div class="result_box">
+<div class="results">
 <div class="icon">
-    <i class="fas fa-crown"></i>
+    <i class="grade"></i>
 </div>
-    <div class="complete_text">You've completed the Quiz</div>
-    <div class="score_text">
-        <!--<span>and sorry, You got only <p>2</p>out of<p>5</p> </span>-->
+    <div class="completed">You've completed the Quiz</div>
+    <div class="score">
+        <!--<span>and sorryYou got only <p>2</p>out of<p>5</p> </span>-->
 </div>
-    <div class="buttons">
-        <button class="restart">Replay Quiz</button>
-        <button class="quit">Quit Quiz</button>
+    <div class="btn">
+        <button class="again">Retry</button>
+        <button class="quit">Quit</button>
     </div>
     </div>
+<!--Questions and options-->
+  <script src="./Assets/questions.js"></script>
+<!--Quiz codes-->
+<script src="./Assets/script.js"></script>
 
-    <script src="./questions.js"></script>
-
-<script src="./script.js"></script>
-
+   <script type="text/javascript" src="./Assets/materialize.min.css"></script>
 </body>
 </html>
