--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
        <span>What does CSS stand for?</span>
     </div>
     <div class="questList">
-        <div class="option">
+        <div class="optiona">
             <span>Cascading Style Sheets</span>
             <div class="icon tick"><i class="fas fa-check"></i></div>
     </div>
-    <div class="option">
+    <div class="optiona">
         <span>Cascading Style Smiles</span>
         <div class="icon cross"><i class="fas fa-times"></i></div>
     </div>
-    <div class="option">
+    <div class="optiona">
         <span>Cascading Super Style</span>
         <div class="icon cross"><i class="fas fa-times"></i></div>
     </div>
-        <div class="option">
+        <div class="optiona">
             <span>Cascading Style Sass</span>
             <div class="icon cross"><i class="fas fa-times"></i></div>
         </div> 
@@ -84,7 +84,6 @@
 </div>
     <div class="completed">You've completed the Quiz</div>
     <div class="score">
-        <!--<span>and sorryYou got only <p>2</p>out of<p>5</p> </span>-->
 </div>
     <div class="btn">
         <button class="again">Retry</button>
