--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="completed">You've completed the Quiz</div>
     <div class="score">
 </div>
-    <div class="btn">
+    <div class="buttons">
         <button class="again">Retry</button>
         <button class="quit">Quit</button>
     </div>
