--- a/index.html
+++ b/index.html
@@ -8,85 +8,68 @@
 <!--Import Google Icon Font-->
 <script src="https://kit.fontawesome.com/11a8b5ce6f.js"></script>
 </head>
+
 <body>
-    <!--Start Quiz Button-->
-    <div class="start"><button>Start Quiz</button></div>
+    <!-- start Quiz button -->
+    <div class="start_btn"><button>Begin Quiz</button></div>
 
-   <!--Info Box-->
-   <div class="square">
-     <div class="data-name"><span>Rules of this Quiz</span></div>
-   <div class="data_list">
-    <div class="data">1. You'll have <span>20 seconds</span> per each question.</div>
-    <div class="data">2. No switching!</div> 
-    <div class="data">3. When time is up that's it!</div>
-    <div class="data">4. No exiting quiz once you've started</div> 
-    <div class="data">5. You get points if you're right! Duh!</div>
-</div>
-<div class="buttons">
-    <button class="cancel">Leave</button>
-    <button class="try_again">Keep Going</button>
+    <!-- Info Box -->
+    <div class="info_box">
+        <div class="info-title"><span>Rules of the Quiz</span></div>
+        <div class="info-list">
+            <div class="info">1. You'll have 15 seconds per each question.</div>
+            <div class="info">2. No switching!</div>
+            <div class="info">3. When time is up that's it!</div>
+            <div class="info">4. No exiting once you've started</div>
+            <div class="info">5. You'll get points on the basis of your correct answers.</div>
+        </div>
+        <div class="buttons">
+            <button class="quit">Exit Quiz</button>
+            <button class="restart">Continue</button>
+        </div>
     </div>
-</div>
 
-<!--Quiz Box-->
-<div class="quiz">
-    <header>
-        <div class="name">A Quiz App</div>
-        <div class="time">
-            <div class="ttext">Remaining Time</div>
-            <div class="tsec">20</div>
-    </div>
-    <div class="timego"></div>
-    </header>
-<section>
-    <div class="que_text">
-        <!--Questions from Javascript-->
-        <!-- <span>What does CSS stand for?</span>
-    </div>
-    <div class="questList">
-        <div class="optiona">
-            <span>Cascading Style Sheets</span>
-            <div class="icon check"><i class="fas fa-check-square"></i></div>
-    </div>
-    <div class="optiona">
-        <span>Cascading Style Smiles</span>
-        <div class="icon cross"><i class="fas fa-times-circle"></i></div>
-    </div>
-    <div class="optiona">
-        <span>Cascading Super Style</span>
-        <div class="icon cross"><i class="fas fa-times-circle"></i></div>
-    </div>
-        <div class="optiona">
-            <span>Cascading Style Sass</span>
-            <div class="icon cross"><i class="fas fa-times-circle"></i></div>
-        </div>  -->
-    </div>
-    <div class="option_list">
+    <!-- Quiz Box -->
+    <div class="quiz_box">
+        <header>
+            <div class="title">Awesome Quiz Application</div>
+            <div class="timer">
+                <div class="time_left_txt">Time Left</div>
+                <div class="timer_sec">15</div>
+            </div>
+            <div class="time_line"></div>
+        </header>
+        <section>
+            <div class="que_text">
+                <!-- Here I've inserted question from JavaScript -->
+            </div>
+            <div class="option_list">
+                <!-- Here I've inserted options from JavaScript -->
+            </div>
+        </section>
 
+        <!-- footer of Quiz Box -->
+        <footer>
+            <div class="total_que">
+                <!-- Here I've inserted Question Count Number from JavaScript -->
+            </div>
+            <button class="next_btn">Next Que</button>
+        </footer>
     </div>
-</section>
 
-<!--Quiz Box Footer-->
-<footer>
-    <div class="totals">
-        <span><p>2</p>of<p>5</p>Questions</span>
-    </div>
-    <button class="next">Next Question</button>
-</footer>
-</div>
-
-<!--Result Box-->
-<div class="results">
-<div class="icon">
-    <!-- <i class="grade"></i> -->
-</div>
-    <div class="completed">You've completed the Quiz</div>
-    <div class="score">
-</div>
-    <div class="buttons">
-        <button class="again">Retry</button>
-        <button class="quit">Quit</button>
-    </div>
+    <!-- Result Box -->
+    <div class="result_box">
+        <div class="icon">
+            <i class="fas fa-dice-d20"></i>
+        </div>
+        <div class="complete_text">You've completed the Quiz!</div>
+        <div class="score_text">
+            <!-- Here I've inserted Score Result from JavaScript -->
+        </div>
+        <div class="buttons">
+            <button class="restart">Try Again</button>
+            <button class="quit">Quit</button>
+        </div>
     </div>
 
 <!--Questions and options-->
